--- a/src/content/docs/es/guides/deploy/vercel.mdx
+++ b/src/content/docs/es/guides/deploy/vercel.mdx
@@ -84,3 +84,7 @@ Una vez que tu proyecto ha sido importado y desplegado, todos los envíos subsec
 Puedes usar `vercel.json` para sobrescribir el comportamiento predeterminado de Vercel y para configurar ajustes adicionales. Por ejemplo, es posible que desees adjuntar encabezados a las respuestas HTTP de tus despliegues.
 
 📚 Aprende más sobre la [configuración de Vercel](https://vercel.com/docs/configuration).
+
+### Actualizando a Astro 2.0
+
+La versión v2.0 de Astro deja de dar soporte a Node 14, así que asegúrate de que tu proyecto esté usando **Node `16.12.0` o posterior**. Puedes [definir la versión de Node.js](https://vercel.com/changelog/node-js-version-now-customizable-in-the-project-settings) que se utilizará durante el paso de compilación y las funciones serverless desde la página General en la configuración del proyecto.
