--- a/src/content/docs/zh-cn/reference/integrations-reference.mdx
+++ b/src/content/docs/zh-cn/reference/integrations-reference.mdx
@@ -139,7 +139,7 @@ addWatchFile(new URL('./tailwind.config.js', config.root));
 
 **类型**：`({ pattern: string, entryPoint: string }) => void;`
 
-用于向 Astro 项目注入路由的回调函数。注入的路由可以是 [`.astro`页面](/zh-cn/core-concepts/astro-pages/) 或 [`.js`和`.ts`路由处理程序](/zh-cn/core-concepts/astro-pages/#非-html-页面)。
+用于向 Astro 项目注入路由的回调函数。注入的路由可以是 [`.astro`页面](/zh-cn/core-concepts/astro-pages/) 或 [`.js`和`.ts`路由处理程序](/zh-cn/core-concepts/endpoints/#静态文件端点)。
 
 `injectRoute` 接收带有 `pattern` 和 `entryPoint` 的对象值。
 
@@ -216,7 +216,7 @@ injectRoute({
 
 ```js
 export default {
-  name: 'partytown'
+  name: 'partytown',
   hooks: {
     'astro:server:setup': ({ server }) => {
       server.middlewares.use(
@@ -310,7 +310,7 @@ export default {
 
 **上一个钩子**：[`astro:build:setup`](#astrobuildsetup)
 
-**时机**：在生产构建（SSG 或 SSR）完成后。
+**时机**：在生产 SSR 构建完成之后。
 
 **原因**：获取 SSR manifest，这在插件或集成中创建自定义 SSR 构建时很有用。
 
